--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
   <main>
 <section class="hero">
-  <img src="images/Relax.JPG" alt="Relaxing home massage">
+  <img src="image/Relax.JPG" alt="Relaxing home massage">
   <div class="overlay"></div>
   <div class="copy">
     ...
