--- a/index.html
+++ b/index.html
@@ -33,10 +33,13 @@
   </header>
 
   <main>
-<section class="hero">
-  <img src="image/Relax.JPG" alt="Relaxing home massage">
+<section class="hero" style="background-image: url('image/Relax.JPG');">
   <div class="overlay"></div>
   <div class="copy">
+    ...
+  </div>
+</section>
+
     ...
 
           <div>
