--- a/index.html
+++ b/index.html
@@ -33,11 +33,18 @@
   </header>
 
   <main>
-<section class="hero" style="background-image: url('image/Relax.JPG');">
-  <div class="overlay"></div>
-  <div class="copy">
+<section class="hero-text">
+  <div class="container" style="text-align:center; padding:100px 20px; color:white;">
+    <span class="badge">Mobile massage for women</span>
+    <h1>Wellness delivered to your door</h1>
+    <p class="lead">Unwind at home with calming, in-home massage therapies — from pregnancy support to therapeutic care.</p>
+    <div style="margin-top:12px">
+      <a href="#booking" class="btn primary">Book now</a>
+      <a href="#services" class="btn">See services</a>
+    </div>
   </div>
 </section>
+
     
           <div>
             <span class="badge">Mobile massage for women</span>
