--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
   <header>
     <div class="container bar">
       <a class="brand" href="#">
-        <div class="logo">S</div>
+        <div class="logo">
+  <img src="image/logo.png" alt="Siman Massage logo">
+</div>
+
         <div>
           <div style="font-weight:700">Siman</div>
           <div class="small muted">Mobile Massage by Vitty</div>
